<resources>
    <string name="app_name">Learning Progress Story</string>
    <!-- Strings related to login -->
    <string name="action_sign_in">Masuk atau Daftar</string>
    <string name="action_sign_in_short">Masuk</string>
    <string name="welcome">Selamat Datang</string>
    <string name="invalid_username">Username tidak valid</string>
    <string name="invalid_password">Kata sandi minimal 8 karakter</string>
    <string name="invalid_email">Email tidak valid</string>

    <string name="login_failed">"Masuk gagal"</string>

    <string name="register_failed">"Daftar gagal"</string>
    <string name="register_failed_password">"Kata sandi tidak sama"</string>

    <string name="info_loading_title">Memuat</string>
    <string name="info_loading_desc">Sedang berjalan, mohon tunggu</string>
    <string name="info_is_running">Sedang berjalan, mohon tunggu</string>
    <string name="info_failed_username">"Username tidak valid"</string>
    <string name="info_failed_password">"Password tidak valid"</string>
    <string name="info_cant_empty">Tidak boleh kosong</string>
    <string name="info_empty">Data Kosong</string>
    <string name="info_register_succeed">Pendaftaran berhasil</string>

    <string name="lbl_login">Masuk</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_email_hint">Masukkan Email Anda</string>
    <string name="lbl_username">Nama Pengguna</string>
    <string name="lbl_username_hint">Masukkan Nama Pengguna</string>
    <string name="lbl_passw">Kata sandi</string>
    <string name="lbl_passw_hint">Masukkan Sandi</string>
    <string name="lbl_confirm_passw">Konfirmasi Sandi</string>
    <string name="lbl_confirm_passw_hint">KonfirmasI Sandi</string>
    <string name="lbl_register">Daftar</string>
    <string name="lbl_back">Kembali</string>
    <string name="lbl_story_created_by">Diposting oleh</string>
    <string name="lbl_description">Deskripsi</string>
    <string name="lbl_setting">Pengaturan</string>
    <string name="lbl_logout">Keluar</string>
    <string name="lbl_language">Bahasa</string>
    <string name="lbl_story">Cerita</string>
    <string name="lbl_profile">Akun</string>
    <string name="lbl_permission_denied">Izin ditolak</string>
    <string name="lbl_choose_image">Pilih 1 gambar</string>
    <string name="info_image_cant_empty">Gambar tidak boleh kosong</string>
    <string name="info_success_post_story">Cerita berhasil dibuat</string>
    <string name="lbl_camera">Kamera</string>
    <string name="lbl_gallery">Galeri</string>
    <string name="lbl_create">Buat</string>
    <string name="info_failed_request">Terjadi kesalahan, request data gagal</string>
    <string name="lbl_map">Peta</string>

</resources>